@@ -1,232 +1,0 @@
-.gitattributes
-.github/workflows/linux-ubuntu-latest-perl-v5.20.3.yml
-.github/workflows/linux-ubuntu-latest.yml
-.github/workflows/macos-latest.yml
-.github/workflows/windows-latest.yml
-.gitignore
-Changes
-DEVELOPMENT.txt
-helper/constants.txt
-helper/DER_type_names.txt
-helper/generate_Constant.pl
-helper/generate_DER.pl
-lib/SPVM/Net/SSLeay.c
-lib/SPVM/Net/SSLeay.config
-lib/SPVM/Net/SSLeay.pm
-lib/SPVM/Net/SSLeay.spvm
-lib/SPVM/Net/SSLeay/ASN1_ENUMERATED.c
-lib/SPVM/Net/SSLeay/ASN1_ENUMERATED.config
-lib/SPVM/Net/SSLeay/ASN1_ENUMERATED.pm
-lib/SPVM/Net/SSLeay/ASN1_ENUMERATED.spvm
-lib/SPVM/Net/SSLeay/ASN1_GENERALIZEDTIME.c
-lib/SPVM/Net/SSLeay/ASN1_GENERALIZEDTIME.config
-lib/SPVM/Net/SSLeay/ASN1_GENERALIZEDTIME.pm
-lib/SPVM/Net/SSLeay/ASN1_GENERALIZEDTIME.spvm
-lib/SPVM/Net/SSLeay/ASN1_INTEGER.c
-lib/SPVM/Net/SSLeay/ASN1_INTEGER.config
-lib/SPVM/Net/SSLeay/ASN1_INTEGER.pm
-lib/SPVM/Net/SSLeay/ASN1_INTEGER.spvm
-lib/SPVM/Net/SSLeay/ASN1_OBJECT.c
-lib/SPVM/Net/SSLeay/ASN1_OBJECT.config
-lib/SPVM/Net/SSLeay/ASN1_OBJECT.pm
-lib/SPVM/Net/SSLeay/ASN1_OBJECT.spvm
-lib/SPVM/Net/SSLeay/ASN1_OCTET_STRING.c
-lib/SPVM/Net/SSLeay/ASN1_OCTET_STRING.config
-lib/SPVM/Net/SSLeay/ASN1_OCTET_STRING.pm
-lib/SPVM/Net/SSLeay/ASN1_OCTET_STRING.spvm
-lib/SPVM/Net/SSLeay/ASN1_STRING.c
-lib/SPVM/Net/SSLeay/ASN1_STRING.config
-lib/SPVM/Net/SSLeay/ASN1_STRING.pm
-lib/SPVM/Net/SSLeay/ASN1_STRING.spvm
-lib/SPVM/Net/SSLeay/ASN1_TIME.c
-lib/SPVM/Net/SSLeay/ASN1_TIME.config
-lib/SPVM/Net/SSLeay/ASN1_TIME.pm
-lib/SPVM/Net/SSLeay/ASN1_TIME.spvm
-lib/SPVM/Net/SSLeay/BIO.c
-lib/SPVM/Net/SSLeay/BIO.config
-lib/SPVM/Net/SSLeay/BIO.pm
-lib/SPVM/Net/SSLeay/BIO.spvm
-lib/SPVM/Net/SSLeay/Callback/AlpnSelect.pm
-lib/SPVM/Net/SSLeay/Callback/AlpnSelect.spvm
-lib/SPVM/Net/SSLeay/Callback/Msg.pm
-lib/SPVM/Net/SSLeay/Callback/Msg.spvm
-lib/SPVM/Net/SSLeay/Callback/NewSession.pm
-lib/SPVM/Net/SSLeay/Callback/NewSession.spvm
-lib/SPVM/Net/SSLeay/Callback/NextProtosAdvertised.pm
-lib/SPVM/Net/SSLeay/Callback/NextProtosAdvertised.spvm
-lib/SPVM/Net/SSLeay/Callback/NextProtoSelect.pm
-lib/SPVM/Net/SSLeay/Callback/NextProtoSelect.spvm
-lib/SPVM/Net/SSLeay/Callback/PemPasswd.pm
-lib/SPVM/Net/SSLeay/Callback/PemPasswd.spvm
-lib/SPVM/Net/SSLeay/Callback/PskClient.pm
-lib/SPVM/Net/SSLeay/Callback/PskClient.spvm
-lib/SPVM/Net/SSLeay/Callback/PskServer.pm
-lib/SPVM/Net/SSLeay/Callback/PskServer.spvm
-lib/SPVM/Net/SSLeay/Callback/RemoveSession.pm
-lib/SPVM/Net/SSLeay/Callback/RemoveSession.spvm
-lib/SPVM/Net/SSLeay/Callback/TlsextServername.pm
-lib/SPVM/Net/SSLeay/Callback/TlsextServername.spvm
-lib/SPVM/Net/SSLeay/Callback/TlsextStatus.pm
-lib/SPVM/Net/SSLeay/Callback/TlsextStatus.spvm
-lib/SPVM/Net/SSLeay/Callback/TlsextTicketKey.pm
-lib/SPVM/Net/SSLeay/Callback/TlsextTicketKey.spvm
-lib/SPVM/Net/SSLeay/ConfigBuilder.pm
-lib/SPVM/Net/SSLeay/Constant.c
-lib/SPVM/Net/SSLeay/Constant.config
-lib/SPVM/Net/SSLeay/Constant.pm
-lib/SPVM/Net/SSLeay/Constant.spvm
-lib/SPVM/Net/SSLeay/DER.c
-lib/SPVM/Net/SSLeay/DER.config
-lib/SPVM/Net/SSLeay/DER.pm
-lib/SPVM/Net/SSLeay/DER.spvm
-lib/SPVM/Net/SSLeay/DH.c
-lib/SPVM/Net/SSLeay/DH.config
-lib/SPVM/Net/SSLeay/DH.pm
-lib/SPVM/Net/SSLeay/DH.spvm
-lib/SPVM/Net/SSLeay/EC_KEY.c
-lib/SPVM/Net/SSLeay/EC_KEY.config
-lib/SPVM/Net/SSLeay/EC_KEY.pm
-lib/SPVM/Net/SSLeay/EC_KEY.spvm
-lib/SPVM/Net/SSLeay/ERR.c
-lib/SPVM/Net/SSLeay/ERR.config
-lib/SPVM/Net/SSLeay/ERR.pm
-lib/SPVM/Net/SSLeay/ERR.spvm
-lib/SPVM/Net/SSLeay/Error.pm
-lib/SPVM/Net/SSLeay/Error.spvm
-lib/SPVM/Net/SSLeay/EVP.c
-lib/SPVM/Net/SSLeay/EVP.config
-lib/SPVM/Net/SSLeay/EVP.pm
-lib/SPVM/Net/SSLeay/EVP.spvm
-lib/SPVM/Net/SSLeay/EVP_CIPHER_CTX.c
-lib/SPVM/Net/SSLeay/EVP_CIPHER_CTX.config
-lib/SPVM/Net/SSLeay/EVP_CIPHER_CTX.pm
-lib/SPVM/Net/SSLeay/EVP_CIPHER_CTX.spvm
-lib/SPVM/Net/SSLeay/EVP_MD.c
-lib/SPVM/Net/SSLeay/EVP_MD.config
-lib/SPVM/Net/SSLeay/EVP_MD.pm
-lib/SPVM/Net/SSLeay/EVP_MD.spvm
-lib/SPVM/Net/SSLeay/EVP_PKEY.c
-lib/SPVM/Net/SSLeay/EVP_PKEY.config
-lib/SPVM/Net/SSLeay/EVP_PKEY.pm
-lib/SPVM/Net/SSLeay/EVP_PKEY.spvm
-lib/SPVM/Net/SSLeay/HMAC_CTX.c
-lib/SPVM/Net/SSLeay/HMAC_CTX.config
-lib/SPVM/Net/SSLeay/HMAC_CTX.pm
-lib/SPVM/Net/SSLeay/HMAC_CTX.spvm
-lib/SPVM/Net/SSLeay/OBJ.c
-lib/SPVM/Net/SSLeay/OBJ.config
-lib/SPVM/Net/SSLeay/OBJ.pm
-lib/SPVM/Net/SSLeay/OBJ.spvm
-lib/SPVM/Net/SSLeay/OCSP.c
-lib/SPVM/Net/SSLeay/OCSP.config
-lib/SPVM/Net/SSLeay/OCSP.pm
-lib/SPVM/Net/SSLeay/OCSP.spvm
-lib/SPVM/Net/SSLeay/OCSP_BASICRESP.c
-lib/SPVM/Net/SSLeay/OCSP_BASICRESP.config
-lib/SPVM/Net/SSLeay/OCSP_BASICRESP.pm
-lib/SPVM/Net/SSLeay/OCSP_BASICRESP.spvm
-lib/SPVM/Net/SSLeay/OCSP_CERTID.c
-lib/SPVM/Net/SSLeay/OCSP_CERTID.config
-lib/SPVM/Net/SSLeay/OCSP_CERTID.pm
-lib/SPVM/Net/SSLeay/OCSP_CERTID.spvm
-lib/SPVM/Net/SSLeay/OCSP_ONEREQ.c
-lib/SPVM/Net/SSLeay/OCSP_ONEREQ.config
-lib/SPVM/Net/SSLeay/OCSP_ONEREQ.pm
-lib/SPVM/Net/SSLeay/OCSP_ONEREQ.spvm
-lib/SPVM/Net/SSLeay/OCSP_REQUEST.c
-lib/SPVM/Net/SSLeay/OCSP_REQUEST.config
-lib/SPVM/Net/SSLeay/OCSP_REQUEST.pm
-lib/SPVM/Net/SSLeay/OCSP_REQUEST.spvm
-lib/SPVM/Net/SSLeay/OCSP_RESPONSE.c
-lib/SPVM/Net/SSLeay/OCSP_RESPONSE.config
-lib/SPVM/Net/SSLeay/OCSP_RESPONSE.pm
-lib/SPVM/Net/SSLeay/OCSP_RESPONSE.spvm
-lib/SPVM/Net/SSLeay/OCSP_SINGLERESP.c
-lib/SPVM/Net/SSLeay/OCSP_SINGLERESP.config
-lib/SPVM/Net/SSLeay/OCSP_SINGLERESP.pm
-lib/SPVM/Net/SSLeay/OCSP_SINGLERESP.spvm
-lib/SPVM/Net/SSLeay/OPENSSL.c
-lib/SPVM/Net/SSLeay/OPENSSL.config
-lib/SPVM/Net/SSLeay/OPENSSL.pm
-lib/SPVM/Net/SSLeay/OPENSSL.spvm
-lib/SPVM/Net/SSLeay/OPENSSL_INIT.c
-lib/SPVM/Net/SSLeay/OPENSSL_INIT.config
-lib/SPVM/Net/SSLeay/OPENSSL_INIT.pm
-lib/SPVM/Net/SSLeay/OPENSSL_INIT.spvm
-lib/SPVM/Net/SSLeay/OPENSSL_INIT_SETTINGS.c
-lib/SPVM/Net/SSLeay/OPENSSL_INIT_SETTINGS.config
-lib/SPVM/Net/SSLeay/OPENSSL_INIT_SETTINGS.pm
-lib/SPVM/Net/SSLeay/OPENSSL_INIT_SETTINGS.spvm
-lib/SPVM/Net/SSLeay/PEM.c
-lib/SPVM/Net/SSLeay/PEM.config
-lib/SPVM/Net/SSLeay/PEM.pm
-lib/SPVM/Net/SSLeay/PEM.spvm
-lib/SPVM/Net/SSLeay/PKCS12.c
-lib/SPVM/Net/SSLeay/PKCS12.config
-lib/SPVM/Net/SSLeay/PKCS12.pm
-lib/SPVM/Net/SSLeay/PKCS12.spvm
-lib/SPVM/Net/SSLeay/RAND.c
-lib/SPVM/Net/SSLeay/RAND.config
-lib/SPVM/Net/SSLeay/RAND.pm
-lib/SPVM/Net/SSLeay/RAND.spvm
-lib/SPVM/Net/SSLeay/SSL_CIPHER.c
-lib/SPVM/Net/SSLeay/SSL_CIPHER.config
-lib/SPVM/Net/SSLeay/SSL_CIPHER.pm
-lib/SPVM/Net/SSLeay/SSL_CIPHER.spvm
-lib/SPVM/Net/SSLeay/SSL_CTX.c
-lib/SPVM/Net/SSLeay/SSL_CTX.config
-lib/SPVM/Net/SSLeay/SSL_CTX.pm
-lib/SPVM/Net/SSLeay/SSL_CTX.spvm
-lib/SPVM/Net/SSLeay/SSL_METHOD.c
-lib/SPVM/Net/SSLeay/SSL_METHOD.config
-lib/SPVM/Net/SSLeay/SSL_METHOD.pm
-lib/SPVM/Net/SSLeay/SSL_METHOD.spvm
-lib/SPVM/Net/SSLeay/SSL_SESSION.c
-lib/SPVM/Net/SSLeay/SSL_SESSION.config
-lib/SPVM/Net/SSLeay/SSL_SESSION.pm
-lib/SPVM/Net/SSLeay/SSL_SESSION.spvm
-lib/SPVM/Net/SSLeay/Util.c
-lib/SPVM/Net/SSLeay/Util.config
-lib/SPVM/Net/SSLeay/Util.pm
-lib/SPVM/Net/SSLeay/Util.spvm
-lib/SPVM/Net/SSLeay/X509.c
-lib/SPVM/Net/SSLeay/X509.config
-lib/SPVM/Net/SSLeay/X509.pm
-lib/SPVM/Net/SSLeay/X509.spvm
-lib/SPVM/Net/SSLeay/X509_CRL.c
-lib/SPVM/Net/SSLeay/X509_CRL.config
-lib/SPVM/Net/SSLeay/X509_CRL.pm
-lib/SPVM/Net/SSLeay/X509_CRL.spvm
-lib/SPVM/Net/SSLeay/X509_EXTENSION.c
-lib/SPVM/Net/SSLeay/X509_EXTENSION.config
-lib/SPVM/Net/SSLeay/X509_EXTENSION.pm
-lib/SPVM/Net/SSLeay/X509_EXTENSION.spvm
-lib/SPVM/Net/SSLeay/X509_NAME.c
-lib/SPVM/Net/SSLeay/X509_NAME.config
-lib/SPVM/Net/SSLeay/X509_NAME.pm
-lib/SPVM/Net/SSLeay/X509_NAME.spvm
-lib/SPVM/Net/SSLeay/X509_NAME_ENTRY.c
-lib/SPVM/Net/SSLeay/X509_NAME_ENTRY.config
-lib/SPVM/Net/SSLeay/X509_NAME_ENTRY.pm
-lib/SPVM/Net/SSLeay/X509_NAME_ENTRY.spvm
-lib/SPVM/Net/SSLeay/X509_STORE.c
-lib/SPVM/Net/SSLeay/X509_STORE.config
-lib/SPVM/Net/SSLeay/X509_STORE.pm
-lib/SPVM/Net/SSLeay/X509_STORE.spvm
-lib/SPVM/Net/SSLeay/X509_STORE_CTX.c
-lib/SPVM/Net/SSLeay/X509_STORE_CTX.config
-lib/SPVM/Net/SSLeay/X509_STORE_CTX.pm
-lib/SPVM/Net/SSLeay/X509_STORE_CTX.spvm
-lib/SPVM/Net/SSLeay/X509_VERIFY_PARAM.c
-lib/SPVM/Net/SSLeay/X509_VERIFY_PARAM.config
-lib/SPVM/Net/SSLeay/X509_VERIFY_PARAM.pm
-lib/SPVM/Net/SSLeay/X509_VERIFY_PARAM.spvm
-LICENSE
-Makefile.PL
-MANIFEST			This list of files
-MANIFEST.SKIP
-README.md
-t/basic.t
-t/lib/SPVM/TestCase/Net/SSLeay.spvm
-t/lib/SPVM/TestCase/Net/SSLeay/SSL_CTX.spvm
-t/lib/SPVM/TestCase/Net/SSLeay/Util.spvm
