@@ -8,7 +8,6 @@ class Net::SSLeay {
   use Net::SSLeay::SSL_CTX;
   use Net::SSLeay::ERR;
   use Net::SSLeay::Error;
-  use Net::SSLeay::SSL_CIPHER;
   use Net::SSLeay::X509;
   use Net::SSLeay::X509_NAME;
   use Net::SSLeay::SSL_SESSION;
