@@ -1,11 +1,0 @@
-// Copyright (c) 2024 Yuki Kimoto
-// MIT License
-
-#include "spvm_native.h"
-
-#include <openssl/ssl.h>
-#include <openssl/err.h>
-
-static const char* FILE_NAME = "Net/SSLeay/SSL_CIPHER.c";
-
-// SSL_CIPHER is always constant data structure.
