@@ -1,6 +1,0 @@
-# Copyright (c) 2024 Yuki Kimoto
-# MIT License
-
-class Net::SSLeay::SSL_CIPHER : pointer {
-  
-}
