@@ -4,6 +4,8 @@
     * Add an exception to Net::SSLeay::OBJ#obj2nid method.
   [Bug Fix]
     * Fix bugs in methods in Net::SSLeay::OBJ class.
+  [Changes]
+    * Remove SSL_CIPHER class.
 0.021 2024-12-02
   [New Features]
     * Add Net::SSLeay::ASN1_ENUMERATED#new method.
